--- a/엘라스틱서치 바이블/01.엘라스틱서치 소개.md
+++ b/엘라스틱서치 바이블/01.엘라스틱서치 소개.md
@@ -1,1 +1,30 @@
+## 탄생 배경
+샤이 배논 아저씨가 아파치의 [루씬 라이브러리](https://github.com/ChoSeyoung/TIL/blob/main/%EC%97%98%EB%9D%BC%EC%8A%A4%ED%8B%B1%EC%84%9C%EC%B9%98%20%EB%B0%94%EC%9D%B4%EB%B8%94/ref/%EB%A3%A8%EC%94%AC%20%EB%9D%BC%EC%9D%B4%EB%B8%8C%EB%9F%AC%EB%A6%AC%EA%B0%80%20%EB%AD%90%EC%97%90%EC%9A%94%3F.md)를 기반으로 만든 분산 검색엔진임.
 
+엘라스틱서치가 생긴 이후 키바나(Kibana), 로그스태시(Logstash) 가 엘라스틱에 프로젝트에 합류하여 ELK 스택이 완성됨.
+해당 스택을 이용하여 데이터의 수집, 변환, 저장, 색인, 검색, 시각화까지 해결할 수 있음.
+
+## 데이터 구조
+ES는 JSON 형태로 데이터를 저장, 색인, 검색하기 때문에 NoSQL 의 성격을 가지고 있음.
+그러나 강력한 전문 검색 기능을 탑재했기 때문에 기존 NoSQL DB 와는 다른 차별점을 가지고 있음.
+
+## 기술 컨셉
+### 검색엔진
+ES는 기본적으로 검색엔진임. 타 RDBMS나 NoSQL에 비해 강력한 검색기능을 지원함.
+
+### 분산처리
+ES는 분산 처리를 고려하여 설계됐다. 데이터를 여러 노드에 저장함.
+
+### 고가용성
+ES는 고가용성을 제공한다. 여러 노드 중 한대의 노드에 장애가 발생해도 복제본 데이터를 이용하여 무중단 서비스 지속이 가능함.
+
+### 수평적확장
+ES는 처리할 데이터의 양이 증가되어 더 많은 처리능력이 요구될 때 신규 노드를 참여시켜 대응이 가능함.
+
+## 기타 특징
+- JSON 기반의 REST API 제공
+- 높은 데이터 안정성 제공
+- 다양한 플러그인을 통한 기능 확장 지원
+- 준실시간 검색 기능 지원
+- 트랜잭 미지원
+- 조인 미지원
