--- a/엘라스틱서치 바이블/01.엘라스틱서치 소개.md
+++ b/엘라스틱서치 바이블/01.엘라스틱서치 소개.md
@@ -17,6 +17,7 @@ ES는 분산 처리를 고려하여 설계됐다. 데이터를 여러 노드에 
 
 ### 고가용성
 ES는 고가용성을 제공한다. 여러 노드 중 한대의 노드에 장애가 발생해도 복제본 데이터를 이용하여 무중단 서비스 지속이 가능함.
+![assets_-Ln04DaYZaDjdiR_ZsKo_-LnUxLhQtL_hJwYydM_5_-LnKhur7V1PE9tkQF2XA_image](https://github.com/ChoSeyoung/TIL/assets/42459067/e0171af6-270b-4bab-8379-a02f92e96764)
 
 ### 수평적확장
 ES는 처리할 데이터의 양이 증가되어 더 많은 처리능력이 요구될 때 신규 노드를 참여시켜 대응이 가능함.
