Update 02. 엘라스틱서치 기본 동작과 구조.md

--- a/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
+++ b/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
@@ -32,10 +32,23 @@ GET [인덱스 이름]/_doc/[_id값]
 ```
 POST [인덱스 이름]/_update/[_id값]
 {
-    "doc": {
-        [문서내용]
-    }
+  "doc": {
+    [문서내용]
+  }
 }
 ```
 ### 문서 검색
+```
+GET [인덱스 이름]/_search
+{
+  "query": {
+    "match": {
+      "title": "hello world"
+    }
+  }
+}
+```
 ### 문서 삭제
+```
+DELETE [인덱스 이름]/_doc/[_id]
+```
