Update 02. 엘라스틱서치 기본 동작과 구조.md

--- a/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
+++ b/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
@@ -1,6 +1,4 @@
 ## 들어가기전
-
-
 |type|desc|
 |---|---|
 |문서(document)| 엘라스틱서치가 저장하고 색인을 생성하는 JSON 문서|
@@ -9,6 +7,30 @@
 |노드(node)| 엘라스틱서치 프로세스 하나가 노드 하나를 구성한다. 엘라스틱서치 노드 하나는 여러 개의 샤드를 가진다. |
 |클러스터(cluster)| 노드 여러 개가 모여 하나의 클러스터를 구성한다.|
 |_id| 인덱스 내 문서에 부여되는 고유한 구분자다. 인덱스 이름과 _id의 조합은 엘라스틱서치내에서 고유하다.|
+
+## 루씬 flush 
+문서 색인 요청이 들어오면 루씬은 문서를 분석해서 역색인을 생성한다.
+최초 생성 자체는 메모리 버퍼에 들어가고, 문서 색인, 업데이트, 삭제 등의 작업이 수행되면
+루씬은 메모리에 들고있다가 주기적으로 디스크에 flush 한다.
+
+## 루씬 commit 
+루씬 flush의 경우 디스크에 파일이 실제로 안전하게 기록되는 것까지 보장하지 않는다.
+따라서 루씬은 fsync 시스템 콜을 통해 주기적으로 커널 시스템의 페이지 캐시의 내용과 실제로 디스크에 내용에 기록된 내용의 싱크를 맞추는 작업을 수행한다.
+루씬 commit 과 flush 는 다른 개념이기 때문에 혼동하지 말아야하며, commit이 refresh보다 비용이 훨씬 큰 작업이다.
+
+## 세그먼트
+앞의 작업을 거쳐 디스크에 기록된 파일들이 모이면 세그먼트라는 단위가 된다. 이 세그먼트가 루신의 검색 대상이다.
+세그먼트 자체는 불변성 데이터로 새로운 문서가 들어오면 새로운 세그먼트가 생성된다.
+
+# 루씬 인덱스
+여러 세그먼트가 모이면 하나의 루씬 인덱스가 된다. 이 인덱스를 래핑하면 엘라스틱서치 샤드가 된다.
+
+# 엘라스틱서치 인덱스
+엘라스틱서치 샤드가 여러개 모이면 엘라스틱서치 인덱스가 된다.
+엘라스틱서치 레벨에서는 여러 샤드에 있는 문서를 모두 검색할 수 있다.
+엘라스틱서치에 검색 요청을 보내면 엘라스틱서치는 해당하는 각 샤드를 대상으로 검색을 한 뒤 결과를 모아 병합하여 최종 응답을 만든다.
+이런 구조를 통해 루씬 레벨에서는 불가능한 분산 검색을 엘라스틱서치 레벨에서는 가능하다.
+![Uploading IMG_4BBF97D6515C-1.jpeg…]()
 
 ## 문서색인
 ```
