--- a/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
+++ b/엘라스틱서치 바이블/02. 엘라스틱서치 기본 동작과 구조.md
@@ -30,7 +30,8 @@
 엘라스틱서치 레벨에서는 여러 샤드에 있는 문서를 모두 검색할 수 있다.
 엘라스틱서치에 검색 요청을 보내면 엘라스틱서치는 해당하는 각 샤드를 대상으로 검색을 한 뒤 결과를 모아 병합하여 최종 응답을 만든다.
 이런 구조를 통해 루씬 레벨에서는 불가능한 분산 검색을 엘라스틱서치 레벨에서는 가능하다.
-![Uploading IMG_4BBF97D6515C-1.jpeg…]()
+![IMG_4BBF97D6515C-1](https://github.com/ChoSeyoung/TIL/assets/42459067/c660fcf6-c04b-4201-b957-4e731c80e597)
+
 
 ## 문서색인
 ```
