--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -1,1 +1,35 @@
+## 인덱스 설정 조회
+```
+GET [인덱스 이름]/_settings
+```
+### number_of_shards
+인덱스가 데이터를 몇개의 샤드로 처리할것인지 지정하는 값.
+한번 지정하면 reindex 같은 동작을 통해 인덱스를 통째로 재색인하는 등 특별한 작업을 수행하지 않는 한 변경할 수 없다.
+샤드 하나마다 루씬 인덱스가 하나씩 더 생성된다는 사실과 주 샤드 하나당 복제본 샤드도 늘어난다.
+클러스터에 샤드 숫자가 너무 많아지면 클러스터 성능이 떨어지고, 특히 색인 성능이 감소한다.
+클러스터에 샤드 숫자가 너무 적어지면 장애 상황에서 샤드 복구 상황에 너무 많은 시간이 소요되고 클러스터 안정성이 떨어진다.
 
+### number_of_replicas
+주 샤드 하나당 복제본 샤드를 몇 개 둘 것인지 지정하는 값.
+샤드와는 다르게 동적으로 변경 가능하다.
+```
+PUT [인덱스 이름]/_settings
+{
+  "index.number_of_replicas": 0
+}
+```
+값을 0 으로 지정하면 복제본 샤드를 생성하지 않고 주 샤드만 둔다. 
+값을 0 으로 주는 설정은 주로 대용량의 초기 데이터를 마이그레이션하는 등의 시나리오에서 쓰기 성능을 일시적으로 끌어올리기 위해 사용한다.
+
+### refresh_interval
+엘라스틱서치가 해당 인덱스를 대상으로 refresh를 얼마나 자주 수행할것인지를 지정하는 값.
+엘라스틱서치 인덱스에 색인된 문서는 refresh 되어야 검색 대상이 되기 때문에 중요한 설정임.
+```
+PUT [인덱스 이름]/_setttings
+{
+  "index.refresh_interval": "1s"
+}
+```
+값을 "1s"로 지정하면 1초에 한번씩 refresh를 수행한다. 
+값을 -1로 지정하면 주기적으로 refresh를 수행하지 않는다.
+해당 값이 명시적으로 설정되어있지 않다면 1초마다 refresh 를 수행한다.
