--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -1,4 +1,4 @@
-## 인덱스 설정 조회
+## 인덱스 설정
 ```
 GET [인덱스 이름]/_settings
 ```
@@ -33,3 +33,34 @@ PUT [인덱스 이름]/_setttings
 값을 "1s"로 지정하면 1초에 한번씩 refresh를 수행한다. 
 값을 -1로 지정하면 주기적으로 refresh를 수행하지 않는다.
 해당 값이 명시적으로 설정되어있지 않다면 1초마다 refresh 를 수행한다.
+
+## 매핑과 필드타입
+매핑은 문서가 인덱스에 어떻게 색인되고 저장되는지 정의하는 부분이다. 
+
+인덱스에 문서가 색인될 때 기존에 매핑 정보를 가지고 있지 않던 새로운 필드가 들어오면 
+엘라스틱서치는 자동으로 문서의 내용을 보고 적당한 필드 타입을 지정해서 매핑 정보를 생성한다.
+
+중요한 것은 필드 타입을 포함한 매핑 설정 내 대부분의 내용은 한 번 지정되면 사실상 변경이 불가능하다는 점이다. 
+따라서 서비스 운영 환경에서 대용량의 데이터를 처리해야 할 때는 기본적으로 명시적 으로 매핑을 지정해서 인덱스를 운영해야 한다.
+
+### 명시적 매핑 처리
+```
+PUT [인덱스 이름] 
+{ 
+  "mappings": { 
+    "properties": { 
+      "createdDate": { "type": "date", "format": "strict_date_time || epoch_millis" }, 
+      "keywordString": { "type": "keyword" }, 
+      "textString": { "type": "text" }
+    } 
+  }
+}
+```
+
+### 매핑 추가
+```
+PUT [인덱스 이름]/_mapping 
+{ 
+  "properties": { "longValue": { "type": "long" } } 
+}
+```
