03.인덱스 설계.md 업데이트

--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -64,3 +64,16 @@ PUT [인덱스 이름]/_mapping
   "properties": { "longValue": { "type": "long" } } 
 }
 ```
+
+## 필드 타입
+|분류|종류|
+|---|---|
+|심플 타입| text, keyword, date, long, double, boolean, ip 등|
+|계층 구조를 지원하는 타입| object, nested 등|
+|그 외 특수한 타입| geo_point, geo_shape 등|
+
+### 심플타입
+long, double, boolean은 타 자료형과 비슷하며 해당 자료형보다 
+text, keyword, date에 대해 자세하게 짚고넘어가야한다.
+
+
