03.인덱스 설계.md 업데이트

--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -66,14 +66,22 @@ PUT [인덱스 이름]/_mapping
 ```
 
 ## 필드 타입
-|분류|종류|
-|---|---|
-|심플 타입| text, keyword, date, long, double, boolean, ip 등|
-|계층 구조를 지원하는 타입| object, nested 등|
-|그 외 특수한 타입| geo_point, geo_shape 등|
+|분류|종류|비고|
+|---|---|---|
+|심플 타입| text, keyword, date, long, double, boolean, ip 등|text, keyword, date에 대해 자세하게 짚고넘어가야한다.|
+|계층 구조를 지원하는 타입| object, nested 등|-|
+|그 외 특수한 타입| geo_point, geo_shape 등|-|
 
 ### 심플타입
-long, double, boolean은 타 자료형과 비슷하며 해당 자료형보다 
-text, keyword, date에 대해 자세하게 짚고넘어가야한다.
+|종류|설명|비고|
+|---|---|---|
+|long|64비트 부호 있는 정수||
+|integer|32비트 부호 있는 정수||
+|short|16비트 부호 있는 정수||
+|byte|8비트 부호 있는 정수||
+|double|64비트 부동소수점||
+|float|32비트 부동소수점||
+
+
 
 
