03.인덱스 설계.md 업데이트

--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -81,7 +81,8 @@ PUT [인덱스 이름]/_mapping
 |byte|8비트 부호 있는 정수||
 |double|64비트 부동소수점||
 |float|32비트 부동소수점||
-
+|epoch_millis|ms단위 epoch 시간|
+|epoch_second|s단위 epoch 시간
 
 
 
