--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -84,5 +84,13 @@ PUT [인덱스 이름]/_mapping
 |epoch_millis|ms단위 epoch 시간|
 |epoch_second|s단위 epoch 시간
 
+### object와 nested차이
+Elasticsearch에서 "object"와 "nested" 타입은 JSON 구조를 색인하는 방법에 있어서 중요한 차이점을 가집니다.
+
+1. **Object 타입**: 기본적으로, Elasticsearch는 JSON 객체를 'object' 데이터 타입으로 취급합니다. 이 타입에서는, 중첩된 필드들이 독립적인 레코드로 취급되지 않고 상위 문서의 일부로 색인됩니다. 이는 객체 내의 개별 필드들이 서로 연관되어 있지 않다는 것을 의미합니다. 예를 들어, 한 문서 안에 여러 주소가 있는 경우, 각 주소의 필드들 (예: 도시, 거리명)은 서로 독립적으로 색인되며, 복잡한 관계를 표현하는 데 한계가 있습니다.
+
+2. **Nested 타입**: 'nested' 데이터 타입은 중첩된 JSON 객체를 별도의 독립된 문서로 취급하여 색인합니다. 이를 통해 복잡한 데이터 구조에서 각 중첩된 객체 내의 필드들 간의 관계를 유지할 수 있습니다. 예를 들어, 한 사람이 여러 주소를 가지고 있고, 각 주소 내의 필드들 (예: 도시, 거리명)이 서로 연관되어 있다면, 'nested' 타입을 사용하는 것이 적합합니다. 이를 통해 더 정교한 쿼리가 가능해지고, 객체 간의 복잡한 관계를 효과적으로 표현할 수 있습니다.
+
+간단히 말해서, 'object' 타입은 중첩된 데이터 구조를 단순한 방식으로 취급하는 반면, 'nested' 타입은 이러한 구조를 더 정교하게 처리하여 중첩된 객체 간의 관계를 유지합니다. 이 두 타입의 선택은 데이터의 구조와 쿼리의 필요성에 따라 결정되어야 합니다.
 
 
