--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -87,18 +87,18 @@ PUT [인덱스 이름]/_mapping
 ### object와 nested차이
 Elasticsearch에서 "object"와 "nested" 타입은 JSON 구조를 색인하는 방법에 있어서 중요한 차이점을 가집니다.
 
-1. **Object 타입**: 기본적으로, Elasticsearch는 JSON 객체를 'object' 데이터 타입으로 취급합니다. 이 타입에서는, 중첩된 필드들이 독립적인 레코드로 취급되지 않고 상위 문서의 일부로 색인됩니다. 이는 객체 내의 개별 필드들이 서로 연관되어 있지 않다는 것을 의미합니다. 예를 들어, 한 문서 안에 여러 주소가 있는 경우, 각 주소의 필드들 (예: 도시, 거리명)은 서로 독립적으로 색인되며, 복잡한 관계를 표현하는 데 한계가 있습니다.
+**Object 타입**: 기본적으로, Elasticsearch는 JSON 객체를 'object' 데이터 타입으로 취급합니다. 이 타입에서는, 중첩된 필드들이 독립적인 레코드로 취급되지 않고 상위 문서의 일부로 색인됩니다. 이는 객체 내의 개별 필드들이 서로 연관되어 있지 않다는 것을 의미합니다. 예를 들어, 한 문서 안에 여러 주소가 있는 경우, 각 주소의 필드들 (예: 도시, 거리명)은 서로 독립적으로 색인되며, 복잡한 관계를 표현하는 데 한계가 있습니다.
 
-2. **Nested 타입**: 'nested' 데이터 타입은 중첩된 JSON 객체를 별도의 독립된 문서로 취급하여 색인합니다. 이를 통해 복잡한 데이터 구조에서 각 중첩된 객체 내의 필드들 간의 관계를 유지할 수 있습니다. 예를 들어, 한 사람이 여러 주소를 가지고 있고, 각 주소 내의 필드들 (예: 도시, 거리명)이 서로 연관되어 있다면, 'nested' 타입을 사용하는 것이 적합합니다. 이를 통해 더 정교한 쿼리가 가능해지고, 객체 간의 복잡한 관계를 효과적으로 표현할 수 있습니다.
+**Nested 타입**: 'nested' 데이터 타입은 중첩된 JSON 객체를 별도의 독립된 문서로 취급하여 색인합니다. 이를 통해 복잡한 데이터 구조에서 각 중첩된 객체 내의 필드들 간의 관계를 유지할 수 있습니다. 예를 들어, 한 사람이 여러 주소를 가지고 있고, 각 주소 내의 필드들 (예: 도시, 거리명)이 서로 연관되어 있다면, 'nested' 타입을 사용하는 것이 적합합니다. 이를 통해 더 정교한 쿼리가 가능해지고, 객체 간의 복잡한 관계를 효과적으로 표현할 수 있습니다.
 
 간단히 말해서, 'object' 타입은 중첩된 데이터 구조를 단순한 방식으로 취급하는 반면, 'nested' 타입은 이러한 구조를 더 정교하게 처리하여 중첩된 객체 간의 관계를 유지합니다. 이 두 타입의 선택은 데이터의 구조와 쿼리의 필요성에 따라 결정되어야 합니다.
 
-### textㅇㅘ keyword차이
+### text와 keyword차이
 Elasticsearch에서 `text`와 `keyword` 타입은 문자열 데이터를 다루는 방식에서 중요한 차이점을 가집니다.
 
-1. **Text 타입**: `text` 필드는 전문(full-text) 검색에 사용됩니다. 이 타입의 데이터는 분석되어 인덱스에 저장됩니다. 즉, 입력된 문자열이 토큰화되고, 필요에 따라 소문자화, 스톱워드 제거, 어근 추출(스테밍) 등의 과정을 거치게 됩니다. 이러한 처리를 통해 `text` 필드는 대량의 텍스트(예: 뉴스 기사, 책 내용 등) 내에서 키워드 검색이나 텍스트 분석에 적합합니다. 하지만, 토큰화 과정 때문에 정확한 텍스트 매칭이나 정렬에는 적합하지 않습니다.
+ **Text 타입**: `text` 필드는 전문(full-text) 검색에 사용됩니다. 이 타입의 데이터는 분석되어 인덱스에 저장됩니다. 즉, 입력된 문자열이 토큰화되고, 필요에 따라 소문자화, 스톱워드 제거, 어근 추출(스테밍) 등의 과정을 거치게 됩니다. 이러한 처리를 통해 `text` 필드는 대량의 텍스트(예: 뉴스 기사, 책 내용 등) 내에서 키워드 검색이나 텍스트 분석에 적합합니다. 하지만, 토큰화 과정 때문에 정확한 텍스트 매칭이나 정렬에는 적합하지 않습니다.
 
-2. **Keyword 타입**: `keyword` 필드는 정확한 값의 매칭, 정렬, 집계에 사용됩니다. 이 타입의 데이터는 분석되지 않고, 입력된 문자열 그대로 인덱스에 저장됩니다. 따라서, `keyword` 필드는 필터링, 정렬, 집계(예: 카운팅, 버킷화)에 적합하며, 정확한 값의 매칭이 필요한 경우(예: 이메일 주소, 태그, 상태 코드 등)에 주로 사용됩니다.
+ **Keyword 타입**: `keyword` 필드는 정확한 값의 매칭, 정렬, 집계에 사용됩니다. 이 타입의 데이터는 분석되지 않고, 입력된 문자열 그대로 인덱스에 저장됩니다. 따라서, `keyword` 필드는 필터링, 정렬, 집계(예: 카운팅, 버킷화)에 적합하며, 정확한 값의 매칭이 필요한 경우(예: 이메일 주소, 태그, 상태 코드 등)에 주로 사용됩니다.
 
 요약하자면, `text` 타입은 전문 검색에 적합하고, `keyword` 타입은 정확한 값의 매칭과 데이터의 집계, 정렬에 적합합니다. 이들 타입의 선택은 데이터의 사용 목적과 필요한 쿼리 유형에 따라 달라집니다.
 이 외에도 두 타입은 정렬과 집계, 스크립트 작업을 수행할 때 동작의 차이가 있다. 정렬과 집계, 스크립트 작업의 대상이 될 필드는 text 타입보다 keyword 타입을 쓰는 편이 낫다. keyword 타입은 기본적으로 doc_values 라는 캐시를 사용하고 text 타입은 fielddata 라는 캐시를 사용하기 때문이다.
