--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -117,6 +117,34 @@ Elasticsearch는 여러 내장 애널라이저를 제공합니다. 예를 들어
 
 이러한 애널라이저의 설정은 Elasticsearch의 인덱스 매핑(mapping) 단계에서 정의되며, 검색과 색인 생성 과정에서 중요한 역할을 합니다. 텍스트 데이터의 성격과 검색 요구 사항에 맞는 애널라이저를 선택하거나 정의하는 것은 검색의 정확도와 효율성을 크게 향상시킬 수 있습니다.
 
+### 애널라이저 적용
+특정 텍스트 필드에 `standard` 애널라이저를 적용하는 매핑은 다음과 같이 정의할 수 있습니다:
+
+```json
+PUT /my_index
+{
+  "mappings": {
+    "properties": {
+      "my_text_field": {
+        "type": "text",
+        "analyzer": "standard"
+      }
+    }
+  }
+}
+```
+
+이 예시에서 `my_text_field`는 `text` 타입으로 정의되었고, `standard` 애널라이저가 적용됩니다. 이렇게 설정하면, `my_text_field` 필드에 저장되는 데이터는 `standard` 애널라이저의 규칙에 따라 처리됩니다.
+
+애널라이저의 적용은 검색 쿼리의 정확도와 성능에 큰 영향을 미칠 수 있으므로, 데이터의 성격과 검색 요구 사항을 고려하여 적절한 애널라이저를 선택하는 것이 중요합니다.
+
+
+
+
+
+
+
+
 doc_values
 fielddata
 _source 
