--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -138,7 +138,46 @@ PUT /my_index
 
 애널라이저의 적용은 검색 쿼리의 정확도와 성능에 큰 영향을 미칠 수 있으므로, 데이터의 성격과 검색 요구 사항을 고려하여 적절한 애널라이저를 선택하는 것이 중요합니다.
 
+### ㅋㅓ스텀 애널라이저
+Elasticsearch에서 커스텀 애널라이저(Custom Analyzer)를 생성하고 사용하는 것은 텍스트 필드의 인덱싱 및 검색 과정을 특정 요구 사항에 맞게 세밀하게 조정할 수 있게 해줍니다. 커스텀 애널라이저를 정의하려면, 특정 토크나이저(tokenizer), 토큰 필터(token filters), 그리고 문자 필터(character filters)를 조합하여 사용합니다. 
 
+예를 들어, 소문자화를 수행하고 특정 스톱워드를 제거하는 간단한 커스텀 애널라이저를 정의하는 방법은 다음과 같습니다:
+
+```
+PUT /my_custom_index
+{
+  "settings": {
+    "analysis": {
+      "analyzer": {
+        "my_custom_analyzer": {
+          "type": "custom",
+          "tokenizer": "standard",
+          "char_filter": [],
+          "filter": ["lowercase", "my_stopwords"]
+        }
+      },
+      "filter": {
+        "my_stopwords": {
+          "type": "stop",
+          "stopwords": ["the", "and"]
+        }
+      }
+    }
+  },
+  "mappings": {
+    "properties": {
+      "my_text_field": {
+        "type": "text",
+        "analyzer": "my_custom_analyzer"
+      }
+    }
+  }
+}
+```
+
+이 예시에서 `my_custom_analyzer`는 표준 토크나이저를 사용하고, 소문자화를 적용하며, "the"와 "and"라는 스톱워드를 제거합니다. 그리고 이 애널라이저는 `my_text_field` 필드에 적용됩니다.
+
+커스텀 애널라이저를 사용함으로써 데이터의 특성에 맞는 유연한 인덱싱과 검색 전략을 구현할 수 있습니다.
 
 
 
