03.인덱스 설계.md 업데이트

--- a/엘라스틱서치 바이블/03.인덱스 설계.md
+++ b/엘라스틱서치 바이블/03.인덱스 설계.md
@@ -179,8 +179,19 @@ PUT /my_custom_index
 
 커스텀 애널라이저를 사용함으로써 데이터의 특성에 맞는 유연한 인덱싱과 검색 전략을 구현할 수 있습니다.
 
+### 템플릿
+Elasticsearch에서 인덱스 템플릿(Index Template)과 컴포넌트 템플릿(Component Template)은 인덱스 생성 시 일관된 설정과 매핑을 적용하는 데 사용됩니다. 이들은 인덱스 관리를 간편하고 효율적으로 만들어 줍니다.
 
+1. **인덱스 템플릿 (Index Template)**: 인덱스 템플릿은 새로운 인덱스가 생성될 때 자동으로 적용되는 설정과 매핑을 정의합니다. 이 템플릿은 특정 패턴에 일치하는 인덱스 이름에 대해 사용됩니다. 예를 들어, "log-*" 패턴을 가진 인덱스 템플릿은 "log-2024-01", "log-2024-02" 등의 이름을 가진 모든 새 인덱스에 자동으로 적용됩니다. 인덱스 템플릿은 설정, 매핑, 애널라이저 정의 등을 포함할 수 있습니다.
 
+2. **컴포넌트 템플릿 (Component Template)**: 컴포넌트 템플릿은 재사용 가능한 인덱스 설정 및 매핑의 조각입니다. 이들은 다양한 인덱스 템플릿에서 공통적으로 사용될 수 있는 설정이나 매핑을 정의합니다. 예를 들어, 특정 애널라이저 설정이나 공통 필드 매핑을 컴포넌트 템플릿으로 만들고, 여러 인덱스 템플릿에서 이 컴포넌트 템플릿을 참조할 수 있습니다.
+
+인덱스 템플릿과 컴포넌트 템플릿의 관계는 다음과 같습니다:
+
+- **인덱스 템플릿**은 하나 이상의 **컴포넌트 템플릿**을 포함할 수 있으며, 추가적인 맞춤 설정을 제공할 수 있습니다.
+- **컴포넌트 템플릿**은 다른 인덱스 템플릿에서 공유될 수 있는 설정 및 매핑의 조각을 정의합니다.
+
+이러한 접근 방식은 설정과 매핑을 모듈화하고 재사용할 수 있게 해주어, 인덱스 관리를 보다 유연하고 효율적으로 만들어 줍니다.
 
 
 
